--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "classnames": "^2.3.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "pg": "8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "sequelize": "^6.25.6"
   },
   "devDependencies": {
     "@babel/cli": "7.19.3",
@@ -45,6 +51,7 @@
     "babel-loader": "9.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "eslint": "8.27.0",
     "eslint-config-prettier": "8.5.0",
@@ -64,6 +71,7 @@
     "postcss-nested": "^5.0.6",
     "prettier": "^2.7.1",
     "process": "0.11.10",
+    "sequelize-cli": "^6.4.1",
     "style-loader": "^3.3.1",
     "supertest": "6.3.1",
     "url-loader": "^4.1.1",
